--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@angular/animations": "~11.0.5",
     "@angular/common": "~11.0.5",
     "@angular/compiler": "~11.0.5",
+    "@angular/cli": "^11.0.5",
+    "@angular/compiler-cli": "~11.0.5",
     "@angular/core": "~11.0.5",
     "@angular/forms": "~11.0.5",
     "@angular/platform-browser": "~11.0.5",
